--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,17 +8,18 @@
 	"nonbsp": true,
 	"undef": true,
 	"unused": "vars",
+	"strict": true,
 	"trailing": true,
-	"white": true,
 
 	"esnext": true,
 	"expr": true,
 	"gcl": true,
+	"globalstrict": true,
 	"lastsemic": true,
 	"multistr": true,
 	"smarttabs": true,
 	"sub": true,
 
-	"node": true,
+	"browser": true,
 	"nonstandard": true
 }
