--- a/package.json
+++ b/package.json
@@ -40,7 +40,13 @@
     }
   },
   "dependencies": {
+    "bower": "^1.7.7",
     "gulp-gh-pages": "^0.5.2",
     "pako": "^0.2.7"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   }
 }
